ADJ: Time text and hour hand adjusted

--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@ body {
 
 .clock-face {
   position: absolute;
-  left: 11%;
-  top: 7%;
+  left: 10%;
+  top: 10%;
   height: 50vh;
   width: 80vw;
   border-radius: 100%;
@@ -25,7 +25,7 @@ body {
 }
 
 .hand {
-  width: 50%;
+  width: 35vw;
   height: 3px;
   position: absolute;
   top: 50%;
